plex/jackett/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: plex
  labels:
    app: jackett
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: lscr.io/linuxserver/jackett:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9117
          resources:
            requests:
              memory: 200Mi
              cpu: "0.1"
            limits:
              memory: 500Mi
              cpu: "0.5"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 65534
            runAsNonRoot: false
            runAsUser: 65534
          startupProbe:
            initialDelaySeconds: 30
            failureThreshold: 10
            periodSeconds: 10
            tcpSocket:
              port: 9117
          volumeMounts:
            - mountPath: /config
              name: plex-media
              subpath: config
            - mountPath: /downloads
              name: plex-media
              subpath: "config/blackhole"
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: plex-media
          persistentVolumeClaim:
            claimName: plex-pvc
