plex/jackett/templates/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: jackett
  namespace: plex
spec:
  selector:
    app: jackett
  ports:
    - port: 80
      targetPort: 9117
      protocol: TCP
      name: http
      nodePort: 30003
  type: NodePort
