plex/jackett/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  namespace: plex
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: jackett.palacpl.us
    external-dns.alpha.kubernetes.io/ttl: "120" #optional
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: jackett.palacpl.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  number: 80

  tls:
    - hosts:
        - jackett.palacpl.us
      secretName: secure-tls
